chore: run openrewrite recipe to upgrade spring