@@ -2,21 +2,21 @@ package us.dot.its.jpo.ode.mockdata;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.databind.ObjectMapper;
 
 import lombok.extern.slf4j.Slf4j;
+import tools.jackson.core.JacksonException;
+import tools.jackson.databind.DatabindException;
+
 import us.dot.its.jpo.geojsonconverter.pojos.geojson.Point;
 import us.dot.its.jpo.geojsonconverter.pojos.geojson.bsm.ProcessedBsm;
 import us.dot.its.jpo.ode.model.OdeMessageFrameData;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.JsonMappingException;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import tools.jackson.core.type.TypeReference;
 
 @Slf4j
 public class MockBsmGenerator {
@@ -25,18 +25,17 @@ public class MockBsmGenerator {
 
     public static List<OdeMessageFrameData> getJsonBsms() {
         ObjectMapper objectMapper = new ObjectMapper();
-        objectMapper.registerModule(new JavaTimeModule());
 
         ArrayList<OdeMessageFrameData> bsms = new ArrayList<>();
 
         try {
-            String bsmString = new String(Files.readAllBytes(Paths.get("src/main/resources/mockdata/bsm.json")));
+            String bsmString = new String(Files.readAllBytes(Path.of("src/main/resources/mockdata/bsm.json")));
             OdeMessageFrameData bsm = objectMapper.readValue(bsmString,
                     OdeMessageFrameData.class);
             bsms.add(bsm);
-        } catch (JsonMappingException e) {
+        } catch (DatabindException e) {
             log.error("JsonMappingException", e);
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             log.error("JsonProcessingException", e);
         } catch (IOException e) {
             // TODO Auto-generated catch block
@@ -47,20 +46,19 @@ public class MockBsmGenerator {
 
     public static List<ProcessedBsm<Point>> getProcessedBsms() {
         ObjectMapper objectMapper = new ObjectMapper();
-        objectMapper.registerModule(new JavaTimeModule());
 
         ArrayList<ProcessedBsm<Point>> bsms = new ArrayList<>();
 
         try {
             String processedBsmString = new String(
-                    Files.readAllBytes(Paths.get("src/main/resources/mockdata/processed_bsm.json")));
+                    Files.readAllBytes(Path.of("src/main/resources/mockdata/processed_bsm.json")));
             ProcessedBsm<Point> bsm = objectMapper.readValue(processedBsmString,
                     processedBsmTypeReference);
 
             bsms.add(bsm);
-        } catch (JsonMappingException e) {
+        } catch (DatabindException e) {
             log.error("JsonMappingException", e);
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             log.error("JsonProcessingException", e);
         } catch (IOException e) {
             // TODO Auto-generated catch block
