@@ -3,17 +3,13 @@ package us.dot.its.jpo.ode.api.decoderTests;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
-
+import java.nio.file.Path;
 import org.junit.jupiter.api.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
+import tools.jackson.core.JacksonException;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.databind.ObjectMapper;
 
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import us.dot.its.jpo.geojsonconverter.DateJsonMapper;
@@ -22,12 +18,10 @@ import us.dot.its.jpo.ode.api.asn1.SpatDecoder;
 import us.dot.its.jpo.ode.model.OdeMessageFrameData;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
 
 import static net.javacrumbs.jsonunit.assertj.JsonAssertions.assertThatJson;
 
 @SpringBootTest
-@RunWith(SpringRunner.class)
 @ActiveProfiles("test")
 @AutoConfigureEmbeddedDatabase
 public class SpatDecoderTests {
@@ -40,7 +34,6 @@ public class SpatDecoderTests {
 
     ObjectMapper objectMapper;
 
-    @Autowired
     public SpatDecoderTests(SpatDecoder spatDecoder) {
         this.spatDecoder = spatDecoder;
 
@@ -49,15 +42,15 @@ public class SpatDecoderTests {
         try {
 
             odeSpatDecodedXmlReference = new String(
-                    Files.readAllBytes(Paths.get("src/test/resources/xml/Ode.ReferenceSpatXER.xml")));
+                    Files.readAllBytes(Path.of("src/test/resources/xml/Ode.ReferenceSpatXER.xml")));
 
             odeSpatDecodedJsonReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/spat/Ode.ReferenceSpatJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/spat/Ode.ReferenceSpatJson.json")));
 
             processedSpatReference = new String(
-                    Files.readAllBytes(Paths
-                            .get("src/test/resources/json/spat/GJC.ReferenceProcessedSpatJson.json")));
+                    Files.readAllBytes(Path
+                            .of("src/test/resources/json/spat/GJC.ReferenceProcessedSpatJson.json")));
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -78,7 +71,7 @@ public class SpatDecoderTests {
                     .setSerialId(spat.getMetadata().getSerialId().setStreamId("44a6d71c-8af1-4f45-848c-10bd7f919be8"));
 
             assertThatJson(odeSpatDecodedJsonReference).isEqualTo(spat.toJson());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
@@ -101,7 +94,7 @@ public class SpatDecoderTests {
             spat.setOdeReceivedAt("2025-08-29T16:09:34.416Z");
 
             assertThatJson(processedSpatReference).isEqualTo(spat.toString());
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             assertEquals(true, false);
         }
     }
